attempting to fix view on mobile

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body, html {
   box-shadow: inset 0 0 0 var(--debug-outline) blue;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   /* justify-content: space-around; */
   /* justify-content: flex-start; */
   align-items: center;
